--- a/app/globals.css
+++ b/app/globals.css
@@ -2,19 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
-}
+} */
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+}  */
 
 body {
   color: rgb(var(--foreground-rgb));
@@ -30,4 +32,25 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+/* styles/globals.css */
+.menu-transition-enter {
+  transform: translateX(-100%);
+  transition: transform 300ms ease-in-out;
+}
+
+.menu-transition-enter-active {
+  transform: translateX(0);
+  transition: transform 300ms ease-in-out;
+}
+
+.menu-transition-exit {
+  transform: translateX(0);
+  transition: transform 300ms ease-in-out;
+}
+
+.menu-transition-exit-active {
+  transform: translateX(-100%);
+  transition: transform 300ms ease-in-out;
 }
