--- a/app/globals.css
+++ b/app/globals.css
@@ -18,14 +18,17 @@
   }
 }  */
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+html,
+body,
+#_next {
+  height: 100%;
+}
+
+@layer base {
+  html,
+  body {
+    @apply h-full m-0 p-0;
+  }
 }
 
 @layer utilities {
@@ -53,4 +56,8 @@ body {
 .menu-transition-exit-active {
   transform: translateX(-100%);
   transition: transform 300ms ease-in-out;
+}
+
+.clip-bottom-curve {
+  clip-path: ellipse(100% 80% at 50% 0%);
 }
